EIDDSS-1164 remove grails dependencies from non grails projects

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -8,6 +8,7 @@ of the Signature Service Support Library.
 === Changes
 
 * Edited bundled validation policy, removing the iIDAS tag.
+* Unnecessary dependencies removed.
 
 == Version 2601.1
 
